--- a/static/index.html
+++ b/static/index.html
@@ -347,7 +347,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Earnings (Monthly)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$40,000</div>
+                      <div id="Earnings" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -356,7 +356,18 @@
                 </div>
               </div>
             </div>
-
+            <script>
+            $.ajax({
+              type: "GET",
+              url: 'http://icsl.ee.columbia.edu:8070/testEarnings',
+              data: "id=" + "pw2428", // appears as $_GET['id'] @ your backend side
+              success: function(data) {
+                    // data is ur summary
+                document.getElementById("Earnings").innerHTML = "New text!";
+              }
+            });
+            // document.getElementById("Earnings").innerHTML = "New text!";
+            </script>
             <!-- Earnings (Monthly) Card Example -->
             <div class="col-xl-3 col-md-6 mb-4">
               <div class="card border-left-success shadow h-100 py-2">
