--- a/static/index.html
+++ b/static/index.html
@@ -347,7 +347,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">Earnings (Monthly)</div>
-                      <div id="Earnings" class="h5 mb-0 font-weight-bold text-gray-800"></div>
+                      <div id="monthlyEarnings" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-calendar fa-2x text-gray-300"></i>
@@ -364,7 +364,7 @@
                   <div class="row no-gutters align-items-center">
                     <div class="col mr-2">
                       <div class="text-xs font-weight-bold text-success text-uppercase mb-1">Earnings (Annual)</div>
-                      <div class="h5 mb-0 font-weight-bold text-gray-800">$215,000</div>
+                      <div id="yearlyEarnings" class="h5 mb-0 font-weight-bold text-gray-800"></div>
                     </div>
                     <div class="col-auto">
                       <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
@@ -675,10 +675,20 @@
   <script>
     $.ajax({
       type: "GET",
-      url: 'http://icsl.ee.columbia.edu:8000/testEarnings',
+      url: 'http://icsl.ee.columbia.edu:8000/api/webAPI/monthlyEarnings',
       data: "id=" + "pw2428",
       success: function(data) {
-        document.getElementById("Earnings").innerHTML = data;
+        document.getElementById("monthlyEarnings").innerHTML = data;
+      }
+    });
+  </script>
+  <script>
+    $.ajax({
+      type: "GET",
+      url: 'http://icsl.ee.columbia.edu:8000/api/webAPI/annualEarnings',
+      data: "id=" + "pw2428",
+      success: function(data) {
+        document.getElementById("yearlyEarnings").innerHTML = data;
       }
     });
   </script>
