--- a/static/index.html
+++ b/static/index.html
@@ -32,7 +32,7 @@
       <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
         <div class="sidebar-brand-icon rotate-n-15">
           <!-- <i class="fas fa-laugh-wink"></i> -->
-          <img src="ICSL_Logo_Copy.png">
+          <img src="ICSL_Logo_Copy.png" width="50" height="50">
         </div>
         <div class="sidebar-brand-text mx-3">ICSL</sup></div>
       </a>
